--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
     <link rel="stylesheet" href="css/calendar.emperor-penguin.css">
     <link rel="stylesheet" href="css/calendar.everest-view.css">
     <link rel="stylesheet" href="css/calendar.exotic-island.css">
+    <link rel="stylesheet" href="css/calendar.fast-track.css">
     <link rel="stylesheet" href="css/calendar.fiji-islands.css">
     <link rel="stylesheet" href="css/calendar.finish-line.css">
     <link rel="stylesheet" href="css/calendar.fir-balsam.css">
@@ -397,6 +398,7 @@
                 <option value="emperor-penguin">Emperor Penguin</option>
                 <option value="everest-view">Everest View</option>
                 <option value="exotic-island">Exotic Island</option>
+                <option value="fast-track">Fast Track</option>
                 <option value="fiji-islands">Fiji Islands</option>
                 <option value="finish-line">Finish Line</option>
                 <option value="fir-balsam">Fir Balsam</option>
