--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <link rel="stylesheet" href="css/calendar.cinnamon-street.css">
     <link rel="stylesheet" href="css/calendar.cracked-ice.css">
     <link rel="stylesheet" href="css/calendar.crimson-sky.css">
+    <link rel="stylesheet" href="css/calendar.crossroads-stone.css">
     <link rel="stylesheet" href="css/calendar.crystal-snowfall.css">
     <link rel="stylesheet" href="css/calendar.crystal-stream.css">
     <link rel="stylesheet" href="css/calendar.cyber-pulse.css">
@@ -386,6 +387,7 @@
                 <option value="cinnamon-street">Cinnamon Street</option>
                 <option value="cracked-ice">Cracked Ice</option>
                 <option value="crimson-sky">Crimson Sky</option>
+                <option value="crossroads-stone">Crossroads Stone</option>
                 <option value="crystal-snowfall">Crystal Snowfall</option>
                 <option value="crystal-stream">Crystal Stream</option>
                 <option value="cyber-pulse">Cyber Pulse</option>
