--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
     <link rel="stylesheet" href="css/calendar.steel-shadows.css">
     <link rel="stylesheet" href="css/calendar.stockholm-roofs.css">
     <link rel="stylesheet" href="css/calendar.sword-of-fate.css">
+    <link rel="stylesheet" href="css/calendar.tactical-advantage.css">
     <link rel="stylesheet" href="css/calendar.the-last-mohican.css">
     <link rel="stylesheet" href="css/calendar.time-machine.css">
     <link rel="stylesheet" href="css/calendar.tropical-sunset.css">
@@ -481,6 +482,7 @@
                 <option value="steel-shadows">Steel Shadows</option>
                 <option value="stockholm-roofs">Stockholm Roofs</option>
                 <option value="sword-of-fate">Sword of Fate</option>
+                <option value="tactical-advantage">Tactical Advantage</option>
                 <option value="the-last-mohican">The Last Mohican</option>
                 <option value="time-machine">Time Machine</option>
                 <option value="tropical-sunset">Tropical Sunset</option>
