--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <link rel="stylesheet" href="css/calendar.candy-world.css">
     <link rel="stylesheet" href="css/calendar.cardinals-guards.css">
     <link rel="stylesheet" href="css/calendar.cinnamon-street.css">
+    <link rel="stylesheet" href="css/calendar.competitive-advantage.css">
     <link rel="stylesheet" href="css/calendar.cracked-ice.css">
     <link rel="stylesheet" href="css/calendar.crimson-sky.css">
     <link rel="stylesheet" href="css/calendar.crossroads-stone.css">
@@ -387,6 +388,7 @@
                 <option value="cardinals-guards">Cardinal's Guards</option>
                 <option value="cherry-garden">Cherry Garden</option>
                 <option value="cinnamon-street">Cinnamon Street</option>
+                <option value="competitive-advantage">Competitive Advantage</option>
                 <option value="cracked-ice">Cracked Ice</option>
                 <option value="crimson-sky">Crimson Sky</option>
                 <option value="crossroads-stone">Crossroads Stone</option>
