--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
     <link rel="stylesheet" href="css/calendar.spring-meadow.css">
     <link rel="stylesheet" href="css/calendar.steel-shadows.css">
     <link rel="stylesheet" href="css/calendar.stockholm-roofs.css">
+    <link rel="stylesheet" href="css/calendar.strategic-advantage.css">
     <link rel="stylesheet" href="css/calendar.sword-of-fate.css">
     <link rel="stylesheet" href="css/calendar.tactical-advantage.css">
     <link rel="stylesheet" href="css/calendar.the-last-mohican.css">
@@ -483,6 +484,7 @@
                 <option value="spring-meadow">Spring Meadow</option>
                 <option value="steel-shadows">Steel Shadows</option>
                 <option value="stockholm-roofs">Stockholm Roofs</option>
+                <option value="strategic-advantage">Strategic Advantage</option>
                 <option value="sword-of-fate">Sword of Fate</option>
                 <option value="tactical-advantage">Tactical Advantage</option>
                 <option value="the-last-mohican">The Last Mohican</option>
