--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
     <link rel="stylesheet" href="css/calendar.maple-leaf-fall.css">
     <link rel="stylesheet" href="css/calendar.maple-syrup.css">
     <link rel="stylesheet" href="css/calendar.medieval-knights.css">
+    <link rel="stylesheet" href="css/calendar.mediterranean-dreams.css">
     <link rel="stylesheet" href="css/calendar.melting-glaciers.css">
     <link rel="stylesheet" href="css/calendar.midnight-train.css">
     <link rel="stylesheet" href="css/calendar.migratory-birds.css">
@@ -437,6 +438,7 @@
                 <option value="maple-leaf-fall">Maple Leaf Fall</option>
                 <option value="maple-syrup">Maple Syrup</option>
                 <option value="medieval-knights">Medieval Knights</option>
+                <option value="mediterranean-dreams">Mediterranean Dreams</option>
                 <option value="melting-glaciers">Melting Glaciers</option>
                 <option value="midnight-train">Midnight Train</option>
                 <option value="migratory-birds">Migratory Birds</option>
