--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <link rel="stylesheet" href="css/calendar.cherry-garden.css">
     <link rel="stylesheet" href="css/calendar.candy-world.css">
     <link rel="stylesheet" href="css/calendar.cardinals-guards.css">
+    <link rel="stylesheet" href="css/calendar.caribbean-sea.css">
     <link rel="stylesheet" href="css/calendar.cinnamon-street.css">
     <link rel="stylesheet" href="css/calendar.competitive-advantage.css">
     <link rel="stylesheet" href="css/calendar.cracked-ice.css">
@@ -388,6 +389,7 @@
                 <option value="cafe-de-colombia">Café de Colombia</option>
                 <option value="candy-world">Candy World</option>
                 <option value="cardinals-guards">Cardinal's Guards</option>
+                <option value="caribbean-sea">Caribbean Sea</option>
                 <option value="cherry-garden">Cherry Garden</option>
                 <option value="cinnamon-street">Cinnamon Street</option>
                 <option value="competitive-advantage">Competitive Advantage</option>
