--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <link rel="stylesheet" href="css/calendar.cardinals-guards.css">
     <link rel="stylesheet" href="css/calendar.caribbean-sea.css">
     <link rel="stylesheet" href="css/calendar.cinnamon-street.css">
-    <link rel="stylesheet" href="css/calendar.competitive-advantage.css">
+    <link rel="stylesheet" href="css/calendar.continuous-growth.css">    
     <link rel="stylesheet" href="css/calendar.cracked-ice.css">
     <link rel="stylesheet" href="css/calendar.crimson-sky.css">
     <link rel="stylesheet" href="css/calendar.crossroads-stone.css">
@@ -393,6 +393,7 @@
                 <option value="cherry-garden">Cherry Garden</option>
                 <option value="cinnamon-street">Cinnamon Street</option>
                 <option value="competitive-advantage">Competitive Advantage</option>
+                <option value="continuous-growth">Continuous Growth</option>
                 <option value="cracked-ice">Cracked Ice</option>
                 <option value="crimson-sky">Crimson Sky</option>
                 <option value="crossroads-stone">Crossroads Stone</option>
