--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
     <link rel="stylesheet" href="css/calendar.greenland-icebergs.css">
     <link rel="stylesheet" href="css/calendar.greyscale.css">
     <link rel="stylesheet" href="css/calendar.heavy-rain.css">
+    <link rel="stylesheet" href="css/calendar.hidden-trail.css">
     <link rel="stylesheet" href="css/calendar.high-performance.css">
     <link rel="stylesheet" href="css/calendar.hurricane-clouds.css">
     <link rel="stylesheet" href="css/calendar.japan-emperor.css">
@@ -429,6 +430,7 @@
                 <option value="greenland-icebergs">Greenland’s Icebergs</option>
                 <option value="greyscale">Greyscale</option>
                 <option value="heavy-rain">Heavy Rain</option>
+                <option value="hidden-trail">Hidden Trail</option>
                 <option value="high-performance">High Performance</option>
                 <option value="hurricane-clouds">Hurricane Clouds</option>
                 <option value="japan-emperor">Japan's Emperor</option>
