--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <link rel="stylesheet" href="css/calendar.black-hacker.css">
     <link rel="stylesheet" href="css/calendar.black-hawk.css">
     <link rel="stylesheet" href="css/calendar.black-hole.css">
+    <link rel="stylesheet" href="css/calendar.black-orange.css">
     <link rel="stylesheet" href="css/calendar.black-velvet.css">
     <link rel="stylesheet" href="css/calendar.blue-bird.css">
     <link rel="stylesheet" href="css/calendar.blue-ice.css">
@@ -385,6 +386,7 @@
                 <option value="black-hacker">Black Hacker</option>
                 <option value="black-hawk">Black Hawk</option>
                 <option value="black-hole">Black Hole</option>
+                <option value="black-orange">Black Orange</option>
                 <option value="black-velvet">Black Velvet</option>
                 <option value="blue-bird">Blue Bird</option>
                 <option value="blue-ice">Blue Ice</option>
