--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
     <link rel="stylesheet" href="css/calendar.fir-balsam.css">
     <link rel="stylesheet" href="css/calendar.flamingo-sky.css">
     <link rel="stylesheet" href="css/calendar.forgotten-dreams.css">
+    <link rel="stylesheet" href="css/calendar.frozen-wilderness.css">
     <link rel="stylesheet" href="css/calendar.galactic-glow.css">
     <link rel="stylesheet" href="css/calendar.genghis-khan-arrow.css">
     <link rel="stylesheet" href="css/calendar.giant-petrel.css">
@@ -424,6 +425,7 @@
                 <option value="fir-balsam">Fir Balsam</option>
                 <option value="flamingo-sky">Flamingo Sky</option>
                 <option value="forgotten-dreams">Forgotten Dreams</option>
+                <option value="frozen-wilderness">Frozen Wilderness</option>
                 <option value="galactic-glow">Galactic Glow</option>
                 <option value="genghis-khan-arrow">Genghis Khan's Arrow</option>
                 <option value="giant-petrel">Giant Petrel</option>
