--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
     <link rel="stylesheet" href="css/calendar.hidden-trail.css">
     <link rel="stylesheet" href="css/calendar.high-performance.css">
     <link rel="stylesheet" href="css/calendar.hurricane-clouds.css">
+    <link rel="stylesheet" href="css/calendar.into-the-night.css">
     <link rel="stylesheet" href="css/calendar.japan-emperor.css">
     <link rel="stylesheet" href="css/calendar.kilimanjaro-outskirts.css">
     <link rel="stylesheet" href="css/calendar.lavender-bliss.css">
@@ -440,6 +441,7 @@
                 <option value="hidden-trail">Hidden Trail</option>
                 <option value="high-performance">High Performance</option>
                 <option value="hurricane-clouds">Hurricane Clouds</option>
+                <option value="into-the-night">Into the Night</option>
                 <option value="japan-emperor">Japan's Emperor</option>
                 <option value="kilimanjaro-outskirts">Kilimanjaro Outskirts</option>
                 <option value="lavender-bliss">Lavender Bliss</option>
