--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <link rel="stylesheet" href="css/calendar.black-hole.css">
     <link rel="stylesheet" href="css/calendar.black-orange.css">
     <link rel="stylesheet" href="css/calendar.black-velvet.css">
+    <link rel="stylesheet" href="css/calendar.black-violet.css">
     <link rel="stylesheet" href="css/calendar.blue-bird.css">
     <link rel="stylesheet" href="css/calendar.blue-ice.css">
     <link rel="stylesheet" href="css/calendar.blue-planet.css">
@@ -390,6 +391,7 @@
                 <option value="black-hole">Black Hole</option>
                 <option value="black-orange">Black Orange</option>
                 <option value="black-velvet">Black Velvet</option>
+                <option value="black-violet">Black Violet</option>
                 <option value="blue-bird">Blue Bird</option>
                 <option value="blue-ice">Blue Ice</option>
                 <option value="blue-planet">Blue Planet</option>
