--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
     <link rel="stylesheet" href="css/calendar.success-motivation.css">
     <link rel="stylesheet" href="css/calendar.sword-of-fate.css">
     <link rel="stylesheet" href="css/calendar.tactical-advantage.css">
+    <link rel="stylesheet" href="css/calendar.tactical-command.css">
     <link rel="stylesheet" href="css/calendar.the-last-mohican.css">
     <link rel="stylesheet" href="css/calendar.time-machine.css">
     <link rel="stylesheet" href="css/calendar.tropical-sunset.css">
@@ -509,6 +510,7 @@
                 <option value="success-motivation">Success Motivation</option>
                 <option value="sword-of-fate">Sword of Fate</option>
                 <option value="tactical-advantage">Tactical Advantage</option>
+                <option value="tactical-command">Tactical Command</option>
                 <option value="the-last-mohican">The Last Mohican</option>
                 <option value="time-machine">Time Machine</option>
                 <option value="tropical-sunset">Tropical Sunset</option>
