--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="css/calendar.core.css">
     <link rel="stylesheet" href="css/calendar.responsive.css">
     <link rel="stylesheet" href="css/calendar.abandoned-castle.css">
+    <link rel="stylesheet" href="css/calendar.adelaide-skyline.css">
     <link rel="stylesheet" href="css/calendar.adriatic-sea.css">
     <link rel="stylesheet" href="css/calendar.aloe-vera.css">
     <link rel="stylesheet" href="css/calendar.alpine-landscape.css">
@@ -373,6 +374,7 @@
             <button class="transparent-button" id="clear-events-btn" aria-label="Clear All Events">Clear All Events</button>
             <select id="theme-switcher" aria-label="Theme Switcher">
                 <option value="abandoned-castle">Abandoned Castle</option>
+                <option value="adelaide-skyline">Adelaide Skyline</option>
                 <option value="adriatic-sea">Adriatic Sea</option>
                 <option value="aloe-vera">Aloe Vera</option>
                 <option value="alpine-landscape">Alpine Landscape</option>
