--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
             <button class="transparent-button" id="clear-events-btn" aria-label="Clear All Events">Clear All Events</button>
             <select id="theme-switcher" aria-label="Theme Switcher">
                 <option value="abandoned-castle">Abandoned Castle</option>
-                <option value="adelaide-skyline">Adelaide Skyline</option>
+                <option value="adelaide-skyline">Adelaide's Skyline</option>
                 <option value="adriatic-sea">Adriatic Sea</option>
                 <option value="aloe-vera">Aloe Vera</option>
                 <option value="alpine-landscape">Alpine Landscape</option>
