--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
     <link rel="stylesheet" href="css/calendar.galactic-glow.css">
     <link rel="stylesheet" href="css/calendar.genghis-khan-arrow.css">
     <link rel="stylesheet" href="css/calendar.giant-petrel.css">
+    <link rel="stylesheet" href="css/calendar.golden-coast.css">
     <link rel="stylesheet" href="css/calendar.golden-gate.css">
     <link rel="stylesheet" href="css/calendar.golden-horizon.css">
     <link rel="stylesheet" href="css/calendar.great-lakes.css">
@@ -435,6 +436,7 @@
                 <option value="galactic-glow">Galactic Glow</option>
                 <option value="genghis-khan-arrow">Genghis Khan's Arrow</option>
                 <option value="giant-petrel">Giant Petrel</option>
+                <option value="golden-coast">Golden Coast</option>
                 <option value="golden-gate">Golden Gate</option>
                 <option value="golden-horizon">Golden Horizon</option>
                 <option value="great-lakes">Great Lakes</option>
