--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
                 <option value="galactic-glow">Galactic Glow</option>
                 <option value="genghis-khan-arrow">Genghis Khan's Arrow</option>
                 <option value="giant-petrel">Giant Petrel</option>
-                <option value="golden-coast">Golden Coast</option>
+                <option value="golden-coast">Gold Coast</option>
                 <option value="golden-gate">Golden Gate</option>
                 <option value="golden-horizon">Golden Horizon</option>
                 <option value="great-lakes">Great Lakes</option>
