--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     <link rel="stylesheet" href="css/calendar.dark-mode.css">
     <link rel="stylesheet" href="css/calendar.deep-forest.css">
     <link rel="stylesheet" href="css/calendar.desert-mirage.css">
+    <link rel="stylesheet" href="css/calendar.distant-skies.css">
     <link rel="stylesheet" href="css/calendar.dragon-flame.css">
     <link rel="stylesheet" href="css/calendar.dragonfly.css">
     <link rel="stylesheet" href="css/calendar.emerald-stream.css">
@@ -420,6 +421,7 @@
                 <option value="dartagnans-rapier">D'Artagnan's Rapier</option>
                 <option value="deep-forest">Deep Forest</option>
                 <option value="desert-mirage">Desert Mirage</option>
+                <option value="distant-skies">Distant Skies</option>
                 <option value="dragon-flame">Dragon Flame</option>
                 <option value="dragonfly">Dragonfly</option>
                 <option value="emerald-stream">Emerald Stream</option>
