--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
     <link rel="stylesheet" href="css/calendar.dartagnans-rapier.css">
     <link rel="stylesheet" href="css/calendar.dark-mode.css">
     <link rel="stylesheet" href="css/calendar.deep-forest.css">
+    <link rel="stylesheet" href="css/calendar.deep-ocean.css">
     <link rel="stylesheet" href="css/calendar.desert-mirage.css">
     <link rel="stylesheet" href="css/calendar.distant-skies.css">
     <link rel="stylesheet" href="css/calendar.dragon-flame.css">
@@ -420,6 +421,7 @@
                 <option value="dark-mode">Dark Mode</option>
                 <option value="dartagnans-rapier">D'Artagnan's Rapier</option>
                 <option value="deep-forest">Deep Forest</option>
+                <option value="deep-ocean">Deep Ocean</option>
                 <option value="desert-mirage">Desert Mirage</option>
                 <option value="distant-skies">Distant Skies</option>
                 <option value="dragon-flame">Dragon Flame</option>
