--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
     <link rel="stylesheet" href="css/calendar.port-victoria.css">
     <link rel="stylesheet" href="css/calendar.pure-light.css">
     <link rel="stylesheet" href="css/calendar.purple-fog.css">
+    <link rel="stylesheet" href="css/calendar.quantum-programmer.css">
     <link rel="stylesheet" href="css/calendar.quiet-evening.css">
     <link rel="stylesheet" href="css/calendar.rainbow-dream.css">
     <link rel="stylesheet" href="css/calendar.rainforest-jungle.css">
@@ -146,6 +147,7 @@
     <link rel="stylesheet" href="css/calendar.sea-star.css">
     <link rel="stylesheet" href="css/calendar.secret-night.css">
     <link rel="stylesheet" href="css/calendar.secretive-ninja.css">
+    <link rel="stylesheet" href="css/calendar.selfless-programmer.css">
     <link rel="stylesheet" href="css/calendar.serene-shores.css">
     <link rel="stylesheet" href="css/calendar.shaolin-monastery.css">
     <link rel="stylesheet" href="css/calendar.shift-in-perception.css">
@@ -492,6 +494,7 @@
                 <option value="port-victoria">Port Victoria</option>
                 <option value="pure-light">Pure Light</option>
                 <option value="purple-fog">Purple Fog</option>
+                <option value="quantum-programmer">Quantum Programmer</option>
                 <option value="quiet-evening">Quiet Evening</option>
                 <option value="rainbow-dream">Rainbow Dream</option>
                 <option value="rainforest-jungle">Rainforest Jungle</option>
@@ -505,6 +508,7 @@
                 <option value="sea-star">Sea Star</option>
                 <option value="secret-night">Secret Night</option>
                 <option value="secretive-ninja">Secretive Ninja</option>
+                <option value="selfless-programmer">Selfless Programmer</option>
                 <option value="serene-shores">Serene Shores</option>
                 <option value="shaolin-monastery">Shaolin Monastery</option>
                 <option value="shift-in-perception">Shift in Perception</option>
