--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
     <link rel="stylesheet" href="css/calendar.finish-line.css">
     <link rel="stylesheet" href="css/calendar.fir-balsam.css">
     <link rel="stylesheet" href="css/calendar.flamingo-sky.css">
+    <link rel="stylesheet" href="css/calendar.free-flight.css">
     <link rel="stylesheet" href="css/calendar.forgotten-dreams.css">
     <link rel="stylesheet" href="css/calendar.frozen-wilderness.css">
     <link rel="stylesheet" href="css/calendar.galactic-glow.css">
@@ -438,6 +439,7 @@
                 <option value="finish-line">Finish Line</option>
                 <option value="fir-balsam">Fir Balsam</option>
                 <option value="flamingo-sky">Flamingo Sky</option>
+                <option value="free-flight">Free Flight</option>
                 <option value="forgotten-dreams">Forgotten Dreams</option>
                 <option value="frozen-wilderness">Frozen Wilderness</option>
                 <option value="galactic-glow">Galactic Glow</option>
