--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
     <link rel="stylesheet" href="css/calendar.lemongrass-sky.css">
     <link rel="stylesheet" href="css/calendar.life-quality.css">
     <link rel="stylesheet" href="css/calendar.lions-mane.css">
+    <link rel="stylesheet" href="css/calendar.lucid-dream.css">
     <link rel="stylesheet" href="css/calendar.macaroni-penguin.css">
     <link rel="stylesheet" href="css/calendar.magellanic-penguin.css">
     <link rel="stylesheet" href="css/calendar.mammoth-tusk.css">
@@ -466,6 +467,7 @@
                 <option value="life-quality">Life Quality</option>
                 <option value="core">Light Mode</option>
                 <option value="lions-mane">Lion's Mane</option>
+                <option value="lucid-dream">Lucid Dream</option>
                 <option value="macaroni-penguin">Macaroni Penguin</option>
                 <option value="magellanic-penguin">Magellanic Penguin</option>
                 <option value="mammoth-tusk">Mammoth Tusk</option>
