--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
     <link rel="stylesheet" href="css/calendar.high-performance.css">
     <link rel="stylesheet" href="css/calendar.hurricane-clouds.css">
     <link rel="stylesheet" href="css/calendar.iceland-volcanoes.css">
+    <link rel="stylesheet" href="css/calendar.imaginary-world.css">
     <link rel="stylesheet" href="css/calendar.into-the-night.css">
     <link rel="stylesheet" href="css/calendar.japan-emperor.css">
     <link rel="stylesheet" href="css/calendar.kilimanjaro-outskirts.css">
@@ -462,6 +463,7 @@
                 <option value="high-performance">High Performance</option>
                 <option value="hurricane-clouds">Hurricane Clouds</option>
                 <option value="iceland-volcanoes">Iceland’s Volcanoes</option>
+                <option value="imaginary-world">Imaginary World</option>
                 <option value="into-the-night">Into the Night</option>
                 <option value="japan-emperor">Japan's Emperor</option>
                 <option value="kilimanjaro-outskirts">Kilimanjaro Outskirts</option>
