--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
     <link rel="stylesheet" href="css/calendar.dragonfly.css">
     <link rel="stylesheet" href="css/calendar.emerald-stream.css">
     <link rel="stylesheet" href="css/calendar.emperor-penguin.css">
+    <link rel="stylesheet" href="css/calendar.essential-oils.css">
     <link rel="stylesheet" href="css/calendar.everest-view.css">
     <link rel="stylesheet" href="css/calendar.exotic-island.css">
     <link rel="stylesheet" href="css/calendar.fast-track.css">
@@ -437,6 +438,7 @@
                 <option value="dragonfly">Dragonfly</option>
                 <option value="emerald-stream">Emerald Stream</option>
                 <option value="emperor-penguin">Emperor Penguin</option>
+                <option value="essential-oils">Essential Oils</option>
                 <option value="everest-view">Everest View</option>
                 <option value="exotic-island">Exotic Island</option>
                 <option value="fast-track">Fast Track</option>
