--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
     <link rel="stylesheet" href="css/calendar.green-coffee.css">
     <link rel="stylesheet" href="css/calendar.greenland-icebergs.css">
     <link rel="stylesheet" href="css/calendar.greyscale.css">
+    <link rel="stylesheet" href="css/calendar.guangzhou-lights.css">
     <link rel="stylesheet" href="css/calendar.heavy-rain.css">
     <link rel="stylesheet" href="css/calendar.hidden-trail.css">
     <link rel="stylesheet" href="css/calendar.high-performance.css">
@@ -460,6 +461,8 @@
                 <option value="green-coffee">Green Coffee</option>
                 <option value="greenland-icebergs">Greenland’s Icebergs</option>
                 <option value="greyscale">Greyscale</option>
+                <option value="greyscale">Greyscale</option>
+                <option value="guangzhou-lights">Guangzhou Lights</option>
                 <option value="heavy-rain">Heavy Rain</option>
                 <option value="hidden-trail">Hidden Trail</option>
                 <option value="high-performance">High Performance</option>
@@ -472,7 +475,6 @@
                 <option value="lavender-bliss">Lavender Bliss</option>
                 <option value="lemongrass-sky">Lemongrass Sky</option>
                 <option value="life-quality">Life Quality</option>
-                <option value="core">Light Mode</option>
                 <option value="lions-mane">Lion's Mane</option>
                 <option value="lucid-dream">Lucid Dream</option>
                 <option value="lunar-eclipse">Lunar Eclipse</option>
