--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
     <link rel="stylesheet" href="css/calendar.hidden-trail.css">
     <link rel="stylesheet" href="css/calendar.high-performance.css">
     <link rel="stylesheet" href="css/calendar.hurricane-clouds.css">
+    <link rel="stylesheet" href="css/calendar.ice-palace.css">
     <link rel="stylesheet" href="css/calendar.iceland-volcanoes.css">
     <link rel="stylesheet" href="css/calendar.imaginary-world.css">
     <link rel="stylesheet" href="css/calendar.into-the-night.css">
@@ -466,6 +467,7 @@
                 <option value="hidden-trail">Hidden Trail</option>
                 <option value="high-performance">High Performance</option>
                 <option value="hurricane-clouds">Hurricane Clouds</option>
+                <option value="ice-palace">Ice Palace</option>
                 <option value="iceland-volcanoes">Iceland’s Volcanoes</option>
                 <option value="imaginary-world">Imaginary World</option>
                 <option value="into-the-night">Into the Night</option>
