--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
     <link rel="stylesheet" href="css/calendar.heavy-rain.css">
     <link rel="stylesheet" href="css/calendar.hidden-trail.css">
     <link rel="stylesheet" href="css/calendar.high-performance.css">
+    <link rel="stylesheet" href="css/calendar.high-speed-rail.css">
     <link rel="stylesheet" href="css/calendar.high-speed-train.css">
     <link rel="stylesheet" href="css/calendar.hurricane-clouds.css">
     <link rel="stylesheet" href="css/calendar.ice-palace.css">
@@ -467,6 +468,7 @@
                 <option value="heavy-rain">Heavy Rain</option>
                 <option value="hidden-trail">Hidden Trail</option>
                 <option value="high-performance">High Performance</option>
+                <option value="high-speed-rail">High-Speed Rail</option>
                 <option value="high-speed-train">High-Speed Train</option>
                 <option value="hurricane-clouds">Hurricane Clouds</option>
                 <option value="ice-palace">Ice Palace</option>
