--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <link rel="stylesheet" href="css/calendar.high-speed-rail.css">
     <link rel="stylesheet" href="css/calendar.high-speed-train.css">
     <link rel="stylesheet" href="css/calendar.hurricane-clouds.css">
-    <link rel="stylesheet" href="css/calendar.hyperloop-ui.css">
+    <link rel="stylesheet" href="css/calendar.hyperloop.css">
     <link rel="stylesheet" href="css/calendar.ice-palace.css">
     <link rel="stylesheet" href="css/calendar.iceland-volcanoes.css">
     <link rel="stylesheet" href="css/calendar.imaginary-world.css">
@@ -472,7 +472,7 @@
                 <option value="high-speed-rail">High-Speed Rail</option>
                 <option value="high-speed-train">High-Speed Train</option>
                 <option value="hurricane-clouds">Hurricane Clouds</option>
-                <option value="hyperloop-ui">Hyperloop UI</option>
+                <option value="hyperloop">Hyperloop</option>
                 <option value="ice-palace">Ice Palace</option>
                 <option value="iceland-volcanoes">Iceland’s Volcanoes</option>
                 <option value="imaginary-world">Imaginary World</option>
