--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
     <link rel="stylesheet" href="css/calendar.deep-ocean.css">
     <link rel="stylesheet" href="css/calendar.desert-mirage.css">
     <link rel="stylesheet" href="css/calendar.distant-skies.css">
+    <link rel="stylesheet" href="css/calendar.doterra-black.css">
     <link rel="stylesheet" href="css/calendar.dragon-flame.css">
     <link rel="stylesheet" href="css/calendar.dragonfly.css">
     <link rel="stylesheet" href="css/calendar.emerald-stream.css">
@@ -439,6 +440,7 @@
                 <option value="deep-ocean">Deep Ocean</option>
                 <option value="desert-mirage">Desert Mirage</option>
                 <option value="distant-skies">Distant Skies</option>
+                <option value="doterra-black">Doterra Black</option>
                 <option value="dragon-flame">Dragon Flame</option>
                 <option value="dragonfly">Dragonfly</option>
                 <option value="emerald-stream">Emerald Stream</option>
