--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
     <link rel="stylesheet" href="css/calendar.quiet-evening.css">
     <link rel="stylesheet" href="css/calendar.rainbow-dream.css">
     <link rel="stylesheet" href="css/calendar.rainforest-jungle.css">
+    <link rel="stylesheet" href="css/calendar.rain-waltz.css">
     <link rel="stylesheet" href="css/calendar.red-lake.css">
     <link rel="stylesheet" href="css/calendar.red-squirrel.css">
     <link rel="stylesheet" href="css/calendar.rising-sun.css">
@@ -523,6 +524,7 @@
                 <option value="quiet-evening">Quiet Evening</option>
                 <option value="rainbow-dream">Rainbow Dream</option>
                 <option value="rainforest-jungle">Rainforest Jungle</option>
+                <option value="rain-waltz">Rain Waltz</option>
                 <option value="red-lake">Red Lake</option>
                 <option value="red-squirrel">Red Squirrel</option>
                 <option value="rising-sun">Rising Sun</option>
