--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
     <link rel="stylesheet" href="css/calendar.the-last-mohican.css">
     <link rel="stylesheet" href="css/calendar.time-machine.css">
     <link rel="stylesheet" href="css/calendar.tropical-sunset.css">
+    <link rel="stylesheet" href="css/calendar.velvety-dark.css">
     <link rel="stylesheet" href="css/calendar.viking-helmet.css">
     <link rel="stylesheet" href="css/calendar.viktoria-falls.css">
     <link rel="stylesheet" href="css/calendar.weekend-downtime.css">
@@ -553,6 +554,7 @@
                 <option value="the-last-mohican">The Last Mohican</option>
                 <option value="time-machine">Time Machine</option>
                 <option value="tropical-sunset">Tropical Sunset</option>
+                <option value="velvety-dark">Velvety Dark</option>
                 <option value="viking-helmet">Viking Helmet</option>
                 <option value="viktoria-falls">Viktoria Falls</option>
                 <option value="weekend-downtime">Weekend Downtime</option>
