--- a/index.html
+++ b/index.html
@@ -132,6 +132,8 @@
     <link rel="stylesheet" href="css/calendar.mountain-peak.css">
     <link rel="stylesheet" href="css/calendar.mount-fuji.css">
     <link rel="stylesheet" href="css/calendar.neon-nights.css">
+    <link rel="stylesheet" href="css/calendar.new-ai.css">
+    <link rel="stylesheet" href="css/calendar.new-black.css">
     <link rel="stylesheet" href="css/calendar.niagara-falls.css">
     <link rel="stylesheet" href="css/calendar.north-pole.css">
     <link rel="stylesheet" href="css/calendar.northern-nights.css">
@@ -508,6 +510,8 @@
                 <option value="mountain-peak">Mountain Peak</option>
                 <option value="mount-fuji">Mount Fuji</option>
                 <option value="neon-nights">Neon Nights</option>
+                <option value="new-ai">New AI</option>
+                <option value="new-black">New Black</option>
                 <option value="niagara-falls">Niagara Falls</option>
                 <option value="north-pole">North Pole</option>
                 <option value="northern-nights">Northern Nights</option>
