--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
                 <option value="blue-ice">Blue Ice</option>
                 <option value="blue-planet">Blue Planet</option>
                 <option value="blue-whale">Blue Whale</option>
-                <option value="blue-white">Blue White</option>
+                <option value="blue-white">Blue & White</option>
                 <option value="bronze-horseman">Bronze Horseman</option>
                 <option value="cacao-plantation">Cacao Plantation</option>
                 <option value="cafe-de-colombia">Café de Colombia</option>
