--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
     <link rel="stylesheet" href="css/calendar.ocean-view.css">
     <link rel="stylesheet" href="css/calendar.ocean-vortex.css">
     <link rel="stylesheet" href="css/calendar.okinawa-breeze.css">
+    <link rel="stylesheet" href="css/calendar.one-step-ahead.css">
     <link rel="stylesheet" href="css/calendar.orange-country.css">
     <link rel="stylesheet" href="css/calendar.pink-lake.css">
     <link rel="stylesheet" href="css/calendar.pirate-ship.css">
@@ -521,6 +522,7 @@
                 <option value="ocean-view">Ocean View</option>
                 <option value="ocean-vortex">Ocean Vortex</option>
                 <option value="okinawa-breeze">Okinawa Breeze</option>
+                <option value="one-step-ahead">One Step Ahead</option>
                 <option value="orange-country">Orange Country</option>
                 <option value="pink-lake">Pink Lake</option>
                 <option value="pirate-ship">Pirate Ship</option>
