--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
     <link rel="stylesheet" href="css/calendar.crystal-snowfall.css">
     <link rel="stylesheet" href="css/calendar.crystal-stream.css">
     <link rel="stylesheet" href="css/calendar.cyber-pulse.css">
-    <link rel="stylesheet" href="css/calendar.dartagnans-rapier.css">
     <link rel="stylesheet" href="css/calendar.dark-mode.css">
+    <link rel="stylesheet" href="css/calendar.dartagnans-rapier.css">
+    <link rel="stylesheet" href="css/calendar.daruma-doll.css">
     <link rel="stylesheet" href="css/calendar.deep-forest.css">
     <link rel="stylesheet" href="css/calendar.deep-ocean.css">
     <link rel="stylesheet" href="css/calendar.desert-mirage.css">
@@ -444,6 +445,7 @@
                 <option value="cyber-pulse">Cyber Pulse</option>
                 <option value="dark-mode">Dark Mode</option>
                 <option value="dartagnans-rapier">D'Artagnan's Rapier</option>
+                <option value="daruma-doll">Daruma Doll</option>
                 <option value="deep-forest">Deep Forest</option>
                 <option value="deep-ocean">Deep Ocean</option>
                 <option value="desert-mirage">Desert Mirage</option>
