--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     <link rel="stylesheet" href="css/calendar.cardinals-guards.css">
     <link rel="stylesheet" href="css/calendar.caribbean-sea.css">
     <link rel="stylesheet" href="css/calendar.cinnamon-street.css">
+    <link rel="stylesheet" href="css/calendar.clean-energy.css">
     <link rel="stylesheet" href="css/calendar.competitive-advantage.css">
     <link rel="stylesheet" href="css/calendar.continuous-growth.css"> 
     <link rel="stylesheet" href="css/calendar.coral-reef.css">   
@@ -434,6 +435,7 @@
                 <option value="caribbean-sea">Caribbean Sea</option>
                 <option value="cherry-garden">Cherry Garden</option>
                 <option value="cinnamon-street">Cinnamon Street</option>
+                <option value="clean-energy">Clean Energy</option>
                 <option value="competitive-advantage">Competitive Advantage</option>
                 <option value="continuous-growth">Continuous Growth</option>
                 <option value="coral-reef">Coral Reef</option>
