--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
     <link rel="stylesheet" href="css/calendar.golden-horizon.css">
     <link rel="stylesheet" href="css/calendar.great-lakes.css">
     <link rel="stylesheet" href="css/calendar.great-wall.css">
+    <link rel="stylesheet" href="css/calendar.green-city.css">
     <link rel="stylesheet" href="css/calendar.green-coffee.css">
     <link rel="stylesheet" href="css/calendar.greenland-icebergs.css">
     <link rel="stylesheet" href="css/calendar.greyscale.css">
@@ -477,6 +478,7 @@
                 <option value="golden-horizon">Golden Horizon</option>
                 <option value="great-lakes">Great Lakes</option>
                 <option value="great-wall">Great Wall</option>
+                <option value="green-city">Green City</option>
                 <option value="green-coffee">Green Coffee</option>
                 <option value="greenland-icebergs">Greenland’s Icebergs</option>
                 <option value="greyscale">Greyscale</option>
