--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
     <link rel="stylesheet" href="css/calendar.ice-palace.css">
     <link rel="stylesheet" href="css/calendar.iceland-volcanoes.css">
     <link rel="stylesheet" href="css/calendar.imaginary-world.css">
+    <link rel="stylesheet" href="css/calendar.in-the-dusk.css">
     <link rel="stylesheet" href="css/calendar.into-the-night.css">
     <link rel="stylesheet" href="css/calendar.japan-emperor.css">
     <link rel="stylesheet" href="css/calendar.kilimanjaro-outskirts.css">
@@ -493,6 +494,7 @@
                 <option value="ice-palace">Ice Palace</option>
                 <option value="iceland-volcanoes">Iceland’s Volcanoes</option>
                 <option value="imaginary-world">Imaginary World</option>
+                <option value="in-the-dusk">In the Dusk</option>
                 <option value="into-the-night">Into the Night</option>
                 <option value="japan-emperor">Japan's Emperor</option>
                 <option value="kilimanjaro-outskirts">Kilimanjaro Outskirts</option>
