--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
     <link rel="stylesheet" href="css/calendar.emperor-penguin.css">
     <link rel="stylesheet" href="css/calendar.essential-oils.css">
     <link rel="stylesheet" href="css/calendar.everest-view.css">
+    <link rel="stylesheet" href="css/calendar.executive-management.css">
     <link rel="stylesheet" href="css/calendar.exotic-island.css">
     <link rel="stylesheet" href="css/calendar.fast-track.css">
     <link rel="stylesheet" href="css/calendar.fiji-islands.css">
@@ -462,6 +463,7 @@
                 <option value="emperor-penguin">Emperor Penguin</option>
                 <option value="essential-oils">Essential Oils</option>
                 <option value="everest-view">Everest View</option>
+                <option value="executive-management">Executive Management</option>
                 <option value="exotic-island">Exotic Island</option>
                 <option value="fast-track">Fast Track</option>
                 <option value="fiji-islands">Fiji Islands</option>
