--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
     <link rel="stylesheet" href="css/calendar.new-ai.css">
     <link rel="stylesheet" href="css/calendar.new-black.css">
     <link rel="stylesheet" href="css/calendar.niagara-falls.css">
+    <link rel="stylesheet" href="css/calendar.night-dragon.css">
     <link rel="stylesheet" href="css/calendar.north-pole.css">
     <link rel="stylesheet" href="css/calendar.northern-nights.css">
     <link rel="stylesheet" href="css/calendar.ocean-surf.css">
@@ -529,6 +530,7 @@
                 <option value="new-ai">New AI</option>
                 <option value="new-black">New Black</option>
                 <option value="niagara-falls">Niagara Falls</option>
+                <option value="night-dragon">Night Dragon</option>
                 <option value="north-pole">North Pole</option>
                 <option value="northern-nights">Northern Nights</option>
                 <option value="ocean-surf">Ocean Surf</option>
