--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <link rel="stylesheet" href="css/calendar.blue-planet.css">
     <link rel="stylesheet" href="css/calendar.blue-whale.css">
     <link rel="stylesheet" href="css/calendar.blue-white.css">
+    <link rel="stylesheet" href="css/calendar.bright-line.css">
     <link rel="stylesheet" href="css/calendar.bronze-horseman.css">
     <link rel="stylesheet" href="css/calendar.cacao-plantation.css">
     <link rel="stylesheet" href="css/calendar.cafe-de-colombia.css">
@@ -434,6 +435,7 @@
                 <option value="blue-planet">Blue Planet</option>
                 <option value="blue-whale">Blue Whale</option>
                 <option value="blue-white">Blue & White</option>
+                <option value="bright-line">Bright Line</option>
                 <option value="bronze-horseman">Bronze Horseman</option>
                 <option value="cacao-plantation">Cacao Plantation</option>
                 <option value="cafe-de-colombia">Café de Colombia</option>
