--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
     <link rel="stylesheet" href="css/calendar.lemongrass-sky.css">
     <link rel="stylesheet" href="css/calendar.life-quality.css">
     <link rel="stylesheet" href="css/calendar.lions-mane.css">
+    <link rel="stylesheet" href="css/calendar.love-station.css">
     <link rel="stylesheet" href="css/calendar.lucid-dream.css">
     <link rel="stylesheet" href="css/calendar.lunar-eclipse.css">
     <link rel="stylesheet" href="css/calendar.macaroni-penguin.css">
@@ -510,6 +511,7 @@
                 <option value="lemongrass-sky">Lemongrass Sky</option>
                 <option value="life-quality">Life Quality</option>
                 <option value="lions-mane">Lion's Mane</option>
+                <option value="love-station">Love Station</option>
                 <option value="lucid-dream">Lucid Dream</option>
                 <option value="lunar-eclipse">Lunar Eclipse</option>
                 <option value="macaroni-penguin">Macaroni Penguin</option>
