--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
     <link rel="stylesheet" href="css/calendar.ocean-vortex.css">
     <link rel="stylesheet" href="css/calendar.okinawa-breeze.css">
     <link rel="stylesheet" href="css/calendar.one-step-ahead.css">
+    <link rel="stylesheet" href="css/calendar.on-the-island.css">
     <link rel="stylesheet" href="css/calendar.orange-country.css">
     <link rel="stylesheet" href="css/calendar.pink-lake.css">
     <link rel="stylesheet" href="css/calendar.pirate-ship.css">
@@ -542,6 +543,7 @@
                 <option value="ocean-vortex">Ocean Vortex</option>
                 <option value="okinawa-breeze">Okinawa Breeze</option>
                 <option value="one-step-ahead">One Step Ahead</option>
+                <option value="on-the-island">On the Island</option>
                 <option value="orange-country">Orange Country</option>
                 <option value="pink-lake">Pink Lake</option>
                 <option value="pirate-ship">Pirate Ship</option>
