--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
     <link rel="stylesheet" href="css/calendar.imaginary-world.css">
     <link rel="stylesheet" href="css/calendar.in-the-dusk.css">
     <link rel="stylesheet" href="css/calendar.into-the-night.css">
+    <link rel="stylesheet" href="css/calendar.invincible-zone.css">
     <link rel="stylesheet" href="css/calendar.japan-emperor.css">
     <link rel="stylesheet" href="css/calendar.kilimanjaro-outskirts.css">
     <link rel="stylesheet" href="css/calendar.lavender-bliss.css">
@@ -506,6 +507,7 @@
                 <option value="imaginary-world">Imaginary World</option>
                 <option value="in-the-dusk">In the Dusk</option>
                 <option value="into-the-night">Into the Night</option>
+                <option value="invincible-zone">invincible Zone</option>
                 <option value="japan-emperor">Japan's Emperor</option>
                 <option value="kilimanjaro-outskirts">Kilimanjaro Outskirts</option>
                 <option value="lavender-bliss">Lavender Bliss</option>
