--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
     <link rel="stylesheet" href="css/calendar.polar-bear.css">
     <link rel="stylesheet" href="css/calendar.porcupine-quill.css">
     <link rel="stylesheet" href="css/calendar.port-victoria.css">
+    <link rel="stylesheet" href="css/calendar.practical-experience.css">
     <link rel="stylesheet" href="css/calendar.pure-light.css">
     <link rel="stylesheet" href="css/calendar.purple-fog.css">
     <link rel="stylesheet" href="css/calendar.quantum-programmer.css">
@@ -507,7 +508,7 @@
                 <option value="imaginary-world">Imaginary World</option>
                 <option value="in-the-dusk">In the Dusk</option>
                 <option value="into-the-night">Into the Night</option>
-                <option value="invincible-zone">invincible Zone</option>
+                <option value="invincible-zone">Invincible Zone</option>
                 <option value="japan-emperor">Japan's Emperor</option>
                 <option value="kilimanjaro-outskirts">Kilimanjaro Outskirts</option>
                 <option value="lavender-bliss">Lavender Bliss</option>
@@ -552,6 +553,7 @@
                 <option value="polar-bear">Polar Bear</option>
                 <option value="porcupine-quill">Porcupine Quill</option>
                 <option value="port-victoria">Port Victoria</option>
+                <option value="practical-experience">Practical Experience</option>
                 <option value="pure-light">Pure Light</option>
                 <option value="purple-fog">Purple Fog</option>
                 <option value="quantum-programmer">Quantum Programmer</option>
